# in-cluster-checks

./: .coveragerc  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  OPENSOURCE_PLAN.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: create-wiki-page.md  new-rule.md  release.md
.claude/rules/: code-style.md  git-workflow.md  github-mcp.md  in-cluster-check.md  testing.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  custom_configuration.py  custom_domain.py  custom_rule.py
src/in_cluster_checks/: __main__.py  cli.py  global_config.py  runner.py
src/in_cluster_checks/core/: data_collector_runner.py  domain.py  exceptions.py  executor.py  executor_factory.py  operations.py  parallel_runner.py  printer.py  rule.py  rule_result.py
src/in_cluster_checks/domains/: etcd_domain.py  hw_domain.py  hw_fw_details_domain.py  k8s_domain.py  linux_domain.py  network_domain.py  security_domain.py  storage_domain.py
src/in_cluster_checks/interfaces/: config.py
src/in_cluster_checks/rules/etcd/: etcd_validations.py
src/in_cluster_checks/rules/hw/: hw_validations.py
src/in_cluster_checks/rules/hw_fw_details/: firmware_rule.py  hardware_rule.py  hw_fw_base.py
src/in_cluster_checks/rules/k8s/: k8s_validations.py
src/in_cluster_checks/utils/: dict_utils.py  enums.py  file_utils.py  oc_api_utils.py  parsing_utils.py  safe_cmd_string.py
src/openshift_in_cluster_checks/: __main__.py  cli.py  global_config.py  runner.py
src/openshift_in_cluster_checks/core/: domain.py  exceptions.py  executor.py  executor_factory.py  operations.py  parallel_runner.py  printer.py  rule.py  rule_result.py
src/openshift_in_cluster_checks/domains/: etcd_domain.py  hw_domain.py  hw_fw_details_domain.py  k8s_domain.py  linux_domain.py  network_domain.py  security_domain.py  storage_domain.py
src/openshift_in_cluster_checks/utils/: file_utils.py  parsing_utils.py  secret_filter.py
src/profilers/: README.md  example.py  loader.py  profiler.py  profilers.yaml
src/profiles/: README.md  example.py  loader.py  profile.py  profiles.yaml
tests/: test_cli.py  test_main.py  test_profilers.py  test_profiles.py  test_runner.py
tests/core/: test_data_collector_executor.py  test_domain.py  test_exceptions.py  test_executor.py  test_executor_factory.py  test_operations.py  test_parallel_runner.py  test_printer.py
tests/domains/: test_etcd_domain.py  test_hw_domain.py  test_hw_fw_details_domain.py  test_k8s_domain.py  test_linux_domain.py  test_network_domain.py  test_security_domain.py  test_storage_domain.py
tests/linters/: check_no_function_imports.py  check_safe_cmd_string.py
tests/pytest_tools/: test_data_collector_base.py  test_operator_base.py  test_rule_base.py
tests/rules/etcd/: test_etcd_validations.py
tests/rules/hw/: __init__.py  test_hw_validations.py
tests/rules/hw_fw_details/: __init__.py  test_firmware_rule.py  test_hardware_rule.py
tests/rules/k8s/: test_k8s_validations.py
tests/rules/linux/: __init__.py  test_linux_validations.py
tests/rules/network/: test_node_connectivity_validations.py  test_ovnk8s_validations.py  test_ovs_validations.py  test_whereabouts_validations.py
tests/rules/security/: test_ca_certificate_expiry.py  test_ca_certificate_validations.py  test_certificate_expiry.py  test_node_certificate_expiry.py  test_node_certificate_validations.py  test_tls_certificate_expiry.py  test_tls_certificate_validations.py
tests/rules/storage/: __init__.py  test_storage_validations.py
tests/unit/linters/: __init__.py  test_check_safe_cmd_string.py
tests/unit/utils/: test_safe_cmd_string.py
(+55 files in other folders)
