[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openshift-in-cluster-checks"
version = "0.1.0"
description = "Generic framework for running health validation rules on OpenShift cluster nodes"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Shai Prizend", email = "sprizend@redhat.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openshift-client>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "isort>=5.13.2",
]

[project.scripts]
openshift-checks = "openshift_in_cluster_checks.cli:main"

[project.urls]
Homepage = "https://github.com/sprizend-rh/openshift-in-cluster-checks"
Repository = "https://github.com/sprizend-rh/openshift-in-cluster-checks"
Issues = "https://github.com/sprizend-rh/openshift-in-cluster-checks/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/openshift_in_cluster_checks --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
